cloudformation/templates/eks-controlplane.yaml
---

AWSTemplateFormatVersion: '2010-09-09'
Description: Create an EKS Control Plane

Parameters:

  ClusterName:
    Description: Name to Assign to the Cluster
    Type: String

  IAMRole:
    Description: IAM Role for the EKS ControlPlane
    Type: String

Resources:

  ControlPlaneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for the EKS control plane"
      VpcId: "vpc-297bf553"
      Tags:
        - Key: "Name"
          Value: "Control Plane"

  ControlPlaneSecurityGroupIngress:
    DependsOn: ControlPlaneSecurityGroup
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ControlPlaneSecurityGroup
      SourceSecurityGroupId: !Ref ControlPlaneSecurityGroup
      IpProtocol: 'tcp'
      FromPort: "0"
      ToPort: "65535"

  HttpSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ControlPlaneSecurityGroup
      CidrIp: "172.31.0.0/16"
      IpProtocol: 'tcp'
      FromPort: "80"
      ToPort: "80"

  HttpsSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ControlPlaneSecurityGroup
      CidrIp: "172.31.0.0/16"
      IpProtocol: 'tcp'
      FromPort: "443"
      ToPort: "443"

  HealthzSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ControlPlaneSecurityGroup
      CidrIp: "172.31.0.0/16"
      IpProtocol: 'tcp'
      FromPort: "10253"
      ToPort: "10253"

  EksControlPlane:
    DependsOn: ControlPlaneSecurityGroup
    Type: "AWS::EKS::Cluster"
    Properties:
      Name: !Ref ClusterName
      RoleArn: !Ref IAMRole
      ResourcesVpcConfig:
        SecurityGroupIds:
          - !Ref ControlPlaneSecurityGroup
        SubnetIds:
          - "subnet-423f4225"
          - "subnet-626d6028"

Outputs:

  SecurityGroup:
    Description: Cluster security group
    Value: !Ref ControlPlaneSecurityGroup

  ClusterName:
    Description: Name assigned to the controlplane
    Value: !Ref EksControlPlane
